<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="not_working">Not working yet!</string>
    <string name="sharing_text">Shared from the Akorn Android app.</string>
    <string name="database_error">Database error!</string>
    <string name="shared_by">Shared from Akorn:</string>

    <string name="app_name">Akorn</string>
    <string name="title_section1">Search type 1</string>
    <string name="title_section2">Search type 2</string>
    <string name="title_section3">Search type 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- menu -->
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_website">Website</string>
    <string name="action_favourite">Add to favourites</string>
    <string name="send_to">Share article</string>
    <string name="action_filters">Edit filters</string>
    <string name="action_add">Add</string>
    <string name="action_about">About</string>
    <string name="about">Copyright 2014 http://akorn.org.\n\nDeveloped at the Oxford e-Research Centre.\n\nIncorporates Android Changelog by Karsten Priegnitz (http://code.google.com/p/android-change-log/).</string>
    <string name="about_title">About</string>

    <!-- preferences -->
    <string name="pref_username">Email</string>
    <string name="pref_username_summary">Login email address for your account on the Akorn website; a new account will be created if you don\'t have one.</string>
    <string name="pref_password">Password</string>
    <string name="pref_password_summary">Password for the above user account.</string>
    <string name="pref_password_confirm">Password confirmation</string>
    <string name="pref_password_confirm_summary">Please type your password again.</string>
    <string name="account_prefs">Account</string>
    <string name="prod_or_dev">This setting should only be needed by developers and can usually be left as the default.</string>
    <string name="pref_authors">Show authors</string>
    <string name="pref_authors_summ">Display author names in the main list of articles.</string>

    <!-- SyncService -->
    <string name="service_name">AcornSyncService</string>
    <string name="action_sync">Refresh</string> <!-- for the sync button -->
    <string name="please_configure">Please configure your username and password using the \"Settings\" menu option</string>
    <string name="loginFail">Incorrect email or password!</string>
    <string name="loginSuccess">Successfully connected to the Akorn server!</string>
    <string name="syncFail">Article sync failed!</string>
    <string name="syncFinish">Finished syncing with Akorn server!</string>
    <string name="in_progress">Sync service is already running!</string>
    <string name="nosearches">You have no saved searches on the Akorn server.</string>
    <string name="password_mismatch">Your passwords don\'t match - please correct this and try again.</string>
    <string name="background_sync">Syncing with the Akorn server...</string>

    <!-- ListView -->
    <string name="empty_list_heading">No Articles</string>
    <string name="empty_list_text">A list of articles will be shown here when a filter for which articles were found is selected from the navigation drawer to the left.</string>
    <string name="first_run">Please close the drawer and then tap the sync icon at the top of the screen and you will be invited to set up an account or log in to an existing account.</string>
    <string name="welcome">Welcome to the Akorn app!</string>

    <!-- CreateAccount -->
    <string name="create_title">Create New Account</string>
    <string name="create_blurb">Akorn requires an account in order to sync with the server. You may create this by supplying your email address, password and password confirmation below.\n\nIf you\'ve already got an account then please click on \'settings\' below and enter your username and password in the main settings.</string>
    <string name="create_button">Create!</string>
    <string name="goto_settings_button">Settings</string>
    <string name="need_account">An account is needed to use the Akorn app.</string>
    <string name="account_in_progress">Account creation is already in progress!</string>
    <string name="create_success">Account creation successful!</string>
    <string name="create_fail">Account creation failed!</string>
    <string name="create_service_name">AkornCreateAccountService</string>
    <string name="failed_because">An account could not be created because:</string>

    <!-- ChangeLog -->
    <string name="action_changelog">Changelog</string>
    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">OK</string>
    <string name="changelog_show_full">more&#8230;</string>

    <!-- FilterActivity -->
    <string name="filter_title">Filters</string>
    <string name="filter_text">You may add new search filters (use the main sidebar to delete them by long pressing). Filters may be a journal title or a keyword entered by typing in the appropriate box below; titles for journals in the Akorn catalogue will autocomplete. Press \'Add\' to add a term and save with the button above when you are ready.</string>
    <string name="confirmDelete">Would you like to delete this filter?</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="filter_service_name">AkornSearchFilterService</string>
    <string name="delete_fail">Failed to delete filter!</string>
    <string name="delete_win">Filter deleted successfully.</string>
    <string name="add_filter">Add</string>
    <string name="submit_or_not">Create this filter?</string>
    <string name="no_filter_created">Filter not created!</string>
    <string name="pick_a_type">Please select either keyword or journal title for this filter.</string>
    <string name="not_empty_journal_please">Please type a journal name before submitting.</string>
    <string name="not_empty_keyword_please">Please type a keyword before submitting.</string>
    <string name="creating_new_journal_filter">Creating new journal filter...</string>
    <string name="creating_new_keyword_filter">Creating new keyword filter...</string>
    <string name="deleting_filter">Deleting filter...</string>
    <string name="created_filter">Filter created!</string>
    <string name="filterSyncFail">Filter sync failed!</string>


</resources>
