<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/account_prefs"
        android:key="pref_key_storage_settings">
        <EditTextPreference
            android:key="pref_username"
            android:title="@string/pref_username"
            android:summary="@string/pref_username_summary"
            android:defaultValue="">
        </EditTextPreference>

        <EditTextPreference
            android:key="pref_password"
            android:title="@string/pref_password"
            android:summary="@string/pref_password_summary"
            android:inputType="textPassword"
            android:defaultValue="">
        </EditTextPreference>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Viewing"
        android:key="pref_key_viewing">
        <CheckBoxPreference
                android:key="pref_authors"
                android:title="@string/pref_authors"
                android:summary="@string/pref_authors_summ"
                android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Server"
        android:key="pref_server_settings">

        <ListPreference
                android:title="Server port"
                android:summary="@string/prod_or_dev"
                android:key="server_pref"
                android:defaultValue="prod"
                android:entries="@array/server_pref_array"
                android:entryValues="@array/server_pref_values" />
    </PreferenceCategory>
</PreferenceScreen>