<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_website"
        android:title="@string/action_website"
        android:orderInCategory="50"
        android:showAsAction="never" />
    <item android:id="@+id/action_changelog"
        android:title="@string/action_changelog"
        android:orderInCategory="20"
        android:showAsAction="never" />
    <item android:id="@+id/action_sync"
          android:title="@string/action_sync"
          android:icon="@drawable/ic_menu_refresh"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_filters"
          android:title="@string/action_filters"
          android:icon="@drawable/ic_menu_find"
          android:showAsAction="ifRoom" />
    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:icon="@android:drawable/ic_menu_info_details"
          android:showAsAction="never" />
</menu>
