<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_title"
            android:id="@+id/create_label"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/create_blurb"
            android:id="@+id/blurb"
            android:layout_gravity="center_horizontal"
            android:padding="2dp"
            android:gravity="center_vertical|center_horizontal"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:layout_gravity="right"
            android:hint="you@example.org"
            android:paddingTop="2dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:layout_gravity="center_horizontal"
            android:hint="password"
            android:paddingTop="2dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_confirmation"
            android:layout_gravity="center_horizontal"
            android:hint="password confirmation"
            android:paddingTop="2dp"/>

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_button"
            android:id="@+id/submit"
            android:onClick="submitRequest"
            android:layout_gravity="center_horizontal"/>
</LinearLayout>